- fixed SpellLineWriter heuristics - better match evaluation: "first.CastDelay > 0 && second.CastDelay == 0" favors first over second